[gd_scene load_steps=3 format=3 uid="uid://b4llg3rjxideq"]

[ext_resource type="Script" uid="uid://7cipb52lk0xu" path="res://scripts/pause_menu_in_game.gd" id="1_pox63"]
[ext_resource type="Texture2D" uid="uid://bqhabj0j6kghk" path="res://icon.svg" id="2_efqxe"]

[node name="PauseMenuInGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -261.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pox63")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.0253638, 0.0253638, 0.025363795, 0.3137255)

[node name="Pause" type="Button" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 1144.0
offset_top = -1.0
offset_right = 1280.0
offset_bottom = 135.0
icon = ExtResource("2_efqxe")

[node name="PauseMenuBox" type="VBoxContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 0
offset_left = 400.0
offset_top = 381.0
offset_right = 892.0
offset_bottom = 666.0

[node name="Resume" type="Button" parent="PauseMenuBox"]
process_mode = 3
layout_mode = 2
text = "Resume"

[node name="Main Menu" type="Button" parent="PauseMenuBox"]
process_mode = 3
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="PauseMenuBox"]
process_mode = 3
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PauseMenuBox/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenuBox/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PauseMenuBox/Quit" to="." method="_on_quit_pressed"]
